// TODO: Implement CheckPermission
// Pseudocode:
// 1. Validate user identity (User/Auth)
// 2. Check permission in DB or cache
// 3. Return allow/deny
// 4. Log check in Nexus

// TODO: Implement AuditEvent
// Pseudocode:
// 1. Record event details (who, what, when)
// 2. Store in audit log DB
// 3. Notify Nexus for system-wide introspection

package security

import (
	"context"
	"time"

	securitypb "github.com/nmxmxh/master-ovasabi/api/protos/security/v1"
	pattern "github.com/nmxmxh/master-ovasabi/internal/service/pattern"
	metadatautil "github.com/nmxmxh/master-ovasabi/pkg/metadata"
	"github.com/nmxmxh/master-ovasabi/pkg/redis"
	"go.uber.org/zap"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

// Service implements the SecurityServiceServer interface.
type Service struct {
	securitypb.UnimplementedSecurityServiceServer
	log   *zap.Logger
	cache *redis.Cache // optional, can be nil
}

func NewService(log *zap.Logger, cache *redis.Cache) *Service {
	s := &Service{
		log:   log,
		cache: cache,
	}
	// Register the service in the knowledge graph at startup
	if err := pattern.RegisterWithNexus(context.Background(), log, "security", nil); err != nil {
		log.Error("RegisterWithNexus failed in NewService (security)", zap.Error(err))
	}
	return s
}

// Authenticate verifies user identity and returns a session token.
func (s *Service) Authenticate(_ context.Context, _ *securitypb.AuthenticateRequest) (*securitypb.AuthenticateResponse, error) {
	// TODO: Implement full logic. See Amadeus context for canonical pattern.
	return nil, status.Error(codes.Unimplemented, "Authenticate not yet implemented")
}

// Authorize checks if a session token is allowed to perform an action on a resource.
func (s *Service) Authorize(_ context.Context, _ *securitypb.AuthorizeRequest) (*securitypb.AuthorizeResponse, error) {
	// TODO: Implement Authorize
	// For now, allow all requests to go through
	return &securitypb.AuthorizeResponse{}, nil
}

// ValidateToken checks if a token is valid and returns its status.
func (s *Service) ValidateToken(_ context.Context, _ *securitypb.ValidateTokenRequest) (*securitypb.ValidateTokenResponse, error) {
	// TODO: Implement ValidateToken
	// Pseudocode:
	// 1. Parse and validate token
	// 2. Check expiration and revocation status
	// 3. Return validity and security score
	return nil, status.Error(codes.Unimplemented, "ValidateToken not yet implemented")
}

// DetectThreats analyzes a request for potential threats.
func (s *Service) DetectThreats(_ context.Context, _ *securitypb.DetectThreatsRequest) (*securitypb.DetectThreatsResponse, error) {
	// TODO: Implement DetectThreats
	// Pseudocode:
	// 1. Analyze context and attributes for anomalies
	// 2. Score threat level
	// 3. Return detected threats and mitigations
	return nil, status.Error(codes.Unimplemented, "DetectThreats not yet implemented")
}

// ReportIncident records a security incident.
func (s *Service) ReportIncident(_ context.Context, req *securitypb.ReportIncidentRequest) (*securitypb.ReportIncidentResponse, error) {
	s.log.Warn("ReportIncident not implemented in SecurityService")
	// TODO: Implement full logic. See Amadeus context for canonical pattern.
	// NOTE: req.Metadata is map[string]string, but pattern helpers expect *common.Metadata.
	// See docs/amadeus/amadeus_context.md for the canonical metadata pattern.
	// TODO: When proto is updated to use *common.Metadata, enable orchestration below.
	if req.Metadata != nil {
		s.log.Warn("pattern helpers not called: ReportIncidentRequest.Metadata is map[string]string, expected *common.Metadata for orchestration integration")
		// Example (future):
		// err := pattern.CacheMetadata(ctx, s.cache, "security_incident", incidentID, req.Metadata, 10*time.Minute)
	}
	return nil, status.Error(codes.Unimplemented, "ReportIncident not yet implemented")
}

// RegisterSecurityPattern registers a new security pattern.
func (s *Service) RegisterSecurityPattern(ctx context.Context, req *securitypb.RegisterSecurityPatternRequest) (*securitypb.RegisterSecurityPatternResponse, error) {
	// 1. Validate metadata (if present)
	if err := metadatautil.ValidateMetadata(req.Pattern.Metadata); err != nil {
		return nil, status.Error(codes.InvalidArgument, "invalid metadata: "+err.Error())
	}
	// 2. Store metadata as *common.Metadata in Postgres (jsonb) or knowledge graph
	// TODO: Implement actual DB write and get pattern.Id
	patternID := "pattern_id" // placeholder
	// 3. Integration points
	if s.cache != nil && req.Pattern.Metadata != nil {
		if err := pattern.CacheMetadata(ctx, s.log, s.cache, "security_pattern", patternID, req.Pattern.Metadata, 10*time.Minute); err != nil {
			s.log.Error("failed to cache metadata", zap.Error(err))
		}
	}
	if err := pattern.RegisterSchedule(ctx, s.log, "security_pattern", patternID, req.Pattern.Metadata); err != nil {
		s.log.Error("failed to register schedule", zap.Error(err))
	}
	if err := pattern.EnrichKnowledgeGraph(ctx, s.log, "security_pattern", patternID, req.Pattern.Metadata); err != nil {
		s.log.Error("failed to enrich knowledge graph", zap.Error(err))
	}
	if err := pattern.RegisterWithNexus(ctx, s.log, "security_pattern", req.Pattern.Metadata); err != nil {
		s.log.Error("failed to register with nexus", zap.Error(err))
	}
	return nil, status.Error(codes.Unimplemented, "RegisterSecurityPattern not yet fully implemented")
}

// ValidatePattern checks if a security pattern is valid.
func (s *Service) ValidatePattern(_ context.Context, _ *securitypb.ValidatePatternRequest) (*securitypb.ValidatePatternResponse, error) {
	// TODO: Implement ValidatePattern
	// Pseudocode:
	// 1. Validate pattern against constraints
	// 2. Return validation results
	return nil, status.Error(codes.Unimplemented, "ValidatePattern not yet implemented")
}

// RecordAuditEvent logs a security-related event.
func (s *Service) RecordAuditEvent(ctx context.Context, req *securitypb.RecordAuditEventRequest) (*securitypb.RecordAuditEventResponse, error) {
	// TODO: Use ctx for tracing/audit context in future
	s.log.Debug("RecordAuditEvent called", zap.Any("ctx", ctx))
	if req.Event != nil && req.Event.Metadata != nil {
		eventID := req.Event.EventId // Use the correct field from proto
		if err := pattern.CacheMetadata(ctx, s.log, s.cache, "security_audit_event", eventID, req.Event.Metadata, 10*time.Minute); err != nil {
			s.log.Error("failed to cache metadata", zap.Error(err))
		}
		if err := pattern.RegisterSchedule(ctx, s.log, "security_audit_event", eventID, req.Event.Metadata); err != nil {
			s.log.Error("failed to register schedule", zap.Error(err))
		}
		if err := pattern.EnrichKnowledgeGraph(ctx, s.log, "security_audit_event", eventID, req.Event.Metadata); err != nil {
			s.log.Error("failed to enrich knowledge graph", zap.Error(err))
		}
		if err := pattern.RegisterWithNexus(ctx, s.log, "security_audit_event", req.Event.Metadata); err != nil {
			s.log.Error("failed to register with nexus", zap.Error(err))
		}
	}
	s.log.Info("Audit event recorded", zap.Any("event", req))
	return &securitypb.RecordAuditEventResponse{}, nil
}

// GetAuditLog streams audit log entries.
func (s *Service) GetAuditLog(_ *securitypb.GetAuditLogRequest, _ securitypb.SecurityService_GetAuditLogServer) error {
	// TODO: Implement GetAuditLog (each audit log entry includes metadata if present)
	return status.Error(codes.Unimplemented, "GetAuditLog not yet implemented")
}

// GetSecurityMetrics returns security metrics and incidents.
func (s *Service) GetSecurityMetrics(_ context.Context, _ *securitypb.GetSecurityMetricsRequest) (*securitypb.GetSecurityMetricsResponse, error) {
	// TODO: Implement GetSecurityMetrics
	// Pseudocode:
	// 1. Aggregate metrics from audit logs and incidents
	// 2. Calculate security scores
	// 3. Return metrics and incidents
	return nil, status.Error(codes.Unimplemented, "GetSecurityMetrics not yet implemented")
}
